--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+        alias, aliquid magnam porro ex aliquam, soluta, ut veniam in sapiente
+        mollitia quibusdam tempore! Consectetur nam exercitationem eveniet
+        voluptates libero iure.
+      </p>
+    </header>
+  </body>
 </html>
