--- a/index.html
+++ b/index.html
@@ -18,22 +18,16 @@
     <main>
       <section>
         <p>
-          <span
-            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
-            veniam. Suscipit eius recusandae, odio voluptas eveniet earum cumque
-            praesentium veritatis perferendis mollitia quasi iste fuga porro
-            facere maxime quam esse.</span
-          ><span
-            >Ab debitis ipsam blanditiis, explicabo labore minus autem eum
-            mollitia suscipit ad facere necessitatibus, officia quos quas ut
-            repellat, magni cupiditate ullam assumenda iure! Porro quam
-            laudantium expedita cupiditate eos.</span
-          ><span
-            >Ullam voluptatibus odit enim natus? Deserunt libero rerum, aperiam,
-            esse dolore ipsa nemo accusantium perspiciatis dicta, vel sapiente
-            cum vero quis dolor. Labore, consequuntur neque! Enim commodi nemo
-            dolore distinctio.</span
-          >
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+          veniam. Suscipit eius recusandae, odio voluptas eveniet earum cumque
+          praesentium veritatis perferendis mollitia quasi iste fuga porro
+          facere maxime quam esse. >Ab debitis ipsam blanditiis, explicabo
+          labore minus autem eum mollitia suscipit ad facere necessitatibus,
+          officia quos quas ut repellat, magni cupiditate ullam assumenda iure!
+          Porro quam laudantium expedita cupiditate eos. >Ullam voluptatibus
+          odit enim natus? Deserunt libero rerum, aperiam, esse dolore ipsa nemo
+          accusantium perspiciatis dicta, vel sapiente cum vero quis dolor.
+          Labore, consequuntur neque! Enim commodi nemo dolore distinctio. >
         </p>
       </section>
     </main>
